--- a/server/pom.xml
+++ b/server/pom.xml
@@ -30,6 +30,14 @@
                 <scanIntervalSeconds>10</scanIntervalSeconds>
               </configuration>
             </plugin>
+	    <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <version>2.6</version>
+              <configuration>
+                <failOnMissingWebXml>false</failOnMissingWebXml>
+              </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -106,7 +114,16 @@
 	  <artifactId>logback-classic</artifactId>
 	  <version>${logback-classic-version}</version>
 	</dependency>
-	<dependency>             <groupId>org.modelmapper</groupId>             <artifactId>modelmapper</artifactId>             <version>2.3.2</version>         </dependency>
+	<dependency>
+	  <groupId>org.glassfish.jersey.containers</groupId>
+	  <artifactId>jersey-container-jetty-servlet</artifactId>
+	  <version>2.28</version>
+	</dependency>
+	<dependency>
+          <groupId>org.modelmapper</groupId>
+          <artifactId>modelmapper</artifactId>
+          <version>2.3.2</version>
+        </dependency>
     </dependencies>
     <properties>
       <jersey.version>2.28</jersey.version>
