--- a/server/pom.xml
+++ b/server/pom.xml
@@ -138,6 +138,11 @@
             <version>2.27</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
