--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Authentification"></activity>
         <activity android:name=".Inscription"></activity>
+        <activity android:name=".Abonnement"></activity>
         <activity android:name=".HttpDialogActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
