--- a/client-js/package.json
+++ b/client-js/package.json
@@ -33,6 +33,7 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "list.js": "^1.5.0"
   }
 }
