--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         <activity android:name=".Authentification"></activity>
         <activity android:name=".Inscription"></activity>
         <activity android:name=".Abonnement"></activity>
+        <activity android:name=".Article"></activity>
+        <activity android:name=".AbonnementBox"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
