--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".Abonnement"></activity>
         <activity android:name=".Article"></activity>
         <activity android:name=".AbonnementBox"></activity>
+        <activity android:name=".MonPannier"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
